# ROSERAG

./: .env.example  .gitignore  .vercelignore  README.md  RELEASE_NOTES.md  android-download.html  deploy-backend.sh  deploy-cpanel.sh  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  roserag_cli.py  vercel.json
.github/workflows/: build-android.yml  ci.yml  release.yml  set-vercel-env.yml
api/: index.py
backend/: Dockerfile  passenger_wsgi.py
backend/app/: config.py  main.py
backend/app/api/: analytics.py  ask.py  bridge.py  chat.py  collections.py  copilot.py  documents.py  drive.py  graph.py  history.py  search.py
backend/app/connectors/: base.py  dspace.py
backend/app/core/: chunking.py  embeddings.py  ingestion.py  llm_client.py  reasoning.py  vector_store.py
backend/app/models/: schemas.py
backend/app/services/: analytics_service.py  dspace_bridge.py  graph_service.py  memory_service.py  trust_service.py
backend/app/services/copilot/: agents.py  base.py
frontend/: app.js  index.html  style.css
k8s/: backend-deployment.yaml  ingress.yaml  namespace.yaml  platform-deployment.yaml
platform/: Dockerfile  capacitor.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
platform/android/app/: build.gradle
platform/src/app/: globals.css  layout.tsx  page.tsx
platform/src/app/app/: layout.tsx  (+1 more)
platform/src/lib/: api.ts  utils.ts
platform/src/types/: index.ts
ui/: angular.json  package.json
ui/src/: index.html  styles.scss
ui/src/app/: app.component.ts  app.config.ts  app.routes.ts
(+40 files in other folders)
