[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roserag"
version = "2.0.0"
description = "Institutional Intelligence Platform — RAG-powered knowledge operating system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "qdrant-client>=1.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.3",
    "pymupdf>=1.25",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0",
    "python-dotenv>=1.0",
]

[project.scripts]
roserag = "roserag_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"*" = ["frontend/**/*"]
